--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -87,7 +87,8 @@
         android:layout_height="wrap_content"
         android:text="Done"
         android:id="@+id/done"
-        android:layout_marginBottom="74dp"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/textView3" />
+        android:layout_below="@+id/password"
+        android:layout_alignStart="@+id/password"
+        android:layout_marginTop="39dp" />
+
 </RelativeLayout>
